# multi-agent-analyst

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
eval/: calibrate.py  calibration_set.jsonl  eval_questions.jsonl  judge.py  run_eval.py  trajectory_checks.py
src/: api.py  config.py  llm.py  run.py
src/agents/: researcher.py  supervisor.py  verifier.py  writer.py
src/graph/: build.py  state.py  trace.py
src/tools/: search.py
tests/: test_graph.py
